# labs-oop-2k

./: README.md
1/: CMakeLists.txt  eliminate_unset_bits.cpp  eliminate_unset_bits.h  main.cpp  tests.cpp
2/: CMakeLists.txt  bitstring.cpp  bitstring.h  tests.cpp
3/: CMakeLists.txt
3/include/: figure.h  octagon.h  square.h  triangle.h
3/src/: main.cpp  octagon.cpp  square.cpp  triangle.cpp
3/tests/: figure_tests.cpp
4/: CMakeLists.txt
4/include/: array.h  figure.h  pentagon.h  point.h  rhombus.h  trapezoid.h
4/src/: main.cpp  main_trapezoid.cpp
4/tests/: figure_tests.cpp
5/: CMakeLists.txt
5/include/: fixed_memory_resource.h  forward_list.h  forward_list_iterator.h
5/src/: fixed_memory_resource.cpp  main.cpp
5/tests/: tests.cpp
6/: CMakeLists.txt
6/include/: battlevisitor.h  factory.h  gamemanager.h  npc.h  observer.h
6/src/: battlevisitor.cpp  factory.cpp  gamemanager.cpp  main.cpp  main_load.cpp  npc.cpp  observer.cpp
6/tests/: test_battle.cpp
7/: CMakeLists.txt
7/include/: battlevisitor.h  coroutine_engine.h  game_constants.h  game_coroutine.h  game_engine.h  gamemanager.h  npc.h  observer.h
7/src/: battlevisitor.cpp  coroutine_engine.cpp  game_engine.cpp  gamemanager.cpp  main.cpp  main_coroutine.cpp  npc.cpp  observer.cpp
7/tests/: test_battle.cpp  test_factory.cpp  test_npc.cpp
